<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GirisActivity"
        android:background="@drawable/gradient_backround"
        tools:layout_editor_absoluteY="25dp">

    <TextView
            android:text="@string/welcome_to_coffee_beans"
            android:id="@+id/giris_welcome_txt"
            android:fontFamily="@font/caveat_brush"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="200dp"
            app:layout_constraintBottom_toTopOf="@+id/giris_username_txt"/>
    <EditText
            android:hint="@string/username"
            android:id="@+id/giris_username_txt"
            android:padding="10dp"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:background="@drawable/edittextarkaplan"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/giris_welcome_txt"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toTopOf="@+id/giris_pasword_txt" tools:ignore="TouchTargetSizeCheck"/>

    <EditText
            android:hint="@string/password"
            android:id="@+id/giris_pasword_txt"
            android:padding="10dp"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:inputType="textPassword"
            android:ems="10"
            android:background="@drawable/edittextarkaplan"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/giris_username_txt"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toTopOf="@+id/giris_forgot_password"
            app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
            android:text="@string/forgot_password"
            android:id="@+id/giris_forgot_password"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/giris_pasword_txt"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toTopOf="@+id/giris_loginbutton" app:drawableLeftCompat="@drawable/lock"/>
    <Button
            android:text="@string/log_n"
            android:id="@+id/giris_loginbutton"
            android:background="@drawable/butonarkaplan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/giris_forgot_password"
            app:layout_constraintBottom_toTopOf="@+id/giris_newUser"/>
    <TextView
            android:text="@string/new_user"
            android:id="@+id/giris_newUser"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/giris_loginbutton"
            app:drawableLeftCompat="@drawable/person_add"/>


</androidx.constraintlayout.widget.ConstraintLayout>