<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/card_view">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp" app:srcCompat="@drawable/latte"
                    android:id="@+id/latte_imageview"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.507"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                    android:text="@string/latte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/latte_baslik"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/latte_imageview"
                    android:fontFamily="@font/akaya_telivigala" android:textSize="20sp" android:textStyle="bold"
                    android:textColor="@color/purple_500"/>
            <TextView
                    android:text="@string/_34_99_tl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/latte_fiyat"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/latte_baslik" android:textSize="16sp"/>
            <Button
                    android:text="@string/add_to_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/buttonSepeteEkle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/latte_fiyat"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>